[gd_scene load_steps=2 format=3 uid="uid://da5xkgqkkhxg2"]

[ext_resource type="Script" path="res://addons/gamepush/Demo/Modules/analytics.gd" id="1_8kmv3"]

[node name="Analytics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8kmv3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Analytics"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="hit" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
disabled = true
text = "hit"

[node name="hit_text" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="goal" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
disabled = true
text = "goal"

[node name="goal_text" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/hit" to="." method="_on_hit_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/GridContainer/hit_text" to="." method="_on_hit_text_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/goal" to="." method="_on_goal_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/GridContainer/goal_text" to="." method="_on_goal_text_text_changed"]
